--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.github.protypangel.frigo"
-        minSdkVersion 29
+        applicationId "com.github.loic.frigo"
+        minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
